--- a/index.html
+++ b/index.html
@@ -81,6 +81,19 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2023.02]</font>
+                    </b> Yang Wang was awarded 2022 Beijing Excellent Master Student in the field of Emergency Management (
+                    <font>王洋获2022年度北京市应急管理领域优秀硕士研究生</font>)
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2023.01]</font>
+                    </b> Zhen Gao was awarded First Prize in Chinese Institute of Electronics (CIE) Technical Invention
+                    Award (
+                    <font>高镇获2022年中国电子学会技术发明一等奖, 第三完成人</font>)
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2022.12]</font>
                     </b> Paper of Xingyu Zhou was accepted by IEEE Network (
                     <font>周星宇论文被IEEE Network (IF=10.294)期刊录用</font>)【基于OTFS-NOMA的低轨卫星接入】
@@ -965,7 +978,8 @@
                         </span>
                     </p> -->
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[50] Xinyu Zhu, Yang Huang, Shaoyu Wang, Qihui Wu, Xiaohu Ge, Yuan Liu, <b>Zhen Gao</b>, "Dynamic
+                        <span>[50] Xinyu Zhu, Yang Huang, Shaoyu Wang, Qihui Wu, Xiaohu Ge, Yuan Liu, <b>Zhen Gao</b>,
+                            "Dynamic
                             Spectrum Anti-Jamming with Reinforcement Learning Based on Value Function Approximation," in
                             IEEE Wireless Communications Letters 2023.
                             <!-- [<a href="https://arxiv.org/abs/2301.06055" target="_blank">arXiv</a>] -->
