--- a/index.html
+++ b/index.html
@@ -82,15 +82,19 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2023.02]</font>
-                    </b> Yang Wang was awarded 2022 Beijing Excellent Master Student in the field of Emergency Management (
-                    <font>王洋获2022年度北京市应急管理领域优秀硕士研究生</font>)
+                    </b> Yang Wang was awarded 2022 Beijing Excellent Master Student in the field of Emergency
+                    Management (<a href="http://baem.org.cn/sys-nd/221.html" target="_blank">
+                        <font>王洋获2022年度北京市应急管理领域优秀硕士研究生</font>
+                    </a>)
                 </li>
 
                 <li> <b>
                         <font color="#FF0000">[2023.01]</font>
                     </b> Zhen Gao was awarded First Prize in Chinese Institute of Electronics (CIE) Technical Invention
-                    Award (
-                    <font>高镇获2022年中国电子学会技术发明一等奖, 第三完成人</font>)
+                    Award (<a href="https://mp.weixin.qq.com/s/KlIbDHE1e72jT-hkqjY3jw" target="_blank">
+                        <font>高镇获2022年中国电子学会技术发明一等奖, 第三完成人</font>
+                    </a>
+                    )
                 </li>
 
                 <li> <b>
