--- a/index.html
+++ b/index.html
@@ -1107,6 +1107,7 @@
                             (<b>SCI Q1 Top, IF=9.619</b>)
                             [<a href="https://arxiv.org/abs/2201.06778" target="_blank">arXiv</a>]
                             [<a href="https://github.com/wuminghui123/D3L-HB" target="_blank">Codes</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/9849060/" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
                     <div class="panel panel-default">
