--- a/index.html
+++ b/index.html
@@ -1100,10 +1100,10 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[38] <b>Z. Gao</b>, Minghui Wu, Chun Hu, Feifei Gao, Guanghui Wen, Dezhi Zheng, Jun Zhang,
+                        <span>[38] <b>Z. Gao</b>, M. Wu, C. Hu, F. Gao, G. Wen, D. Zheng, J. Zhang,
                             "Data-Driven Deep Learning Based Hybrid Beamforming for Aerial Massive MIMO-OFDM Systems
-                            with Implicit CSI", accepted by IEEE Journal on Selected Areas in Communications,
-                            arXiv:2201.06778
+                            With Implicit CSI," in IEEE Journal on Selected Areas in Communications, vol. 40, no. 10,
+                            pp. 2894-2913, Oct. 2022, doi: 10.1109/JSAC.2022.3196064.
                             (<b>SCI Q1 Top, IF=9.619</b>)
                             [<a href="https://arxiv.org/abs/2201.06778" target="_blank">arXiv</a>]
                             [<a href="https://github.com/wuminghui123/D3L-HB" target="_blank">Codes</a>]
