--- a/index.html
+++ b/index.html
@@ -82,10 +82,19 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2023.02]</font>
+                    </b> Ph.D. student Ziwei Wan visits the University of Surrey  (<a href="https://www.surrey.ac.uk/people/pei-xiao" target="_blank">
+                        <font>博士生万子维前往英国萨里大学Pei Xiao教授组访问交换</font>
+                    </a>)
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2023.02]</font>
                     </b> Yang Wang was awarded 2022 Beijing Excellent Master Student in the field of Emergency
                     Management (<a href="http://baem.org.cn/sys-nd/221.html" target="_blank">
                         <font>王洋获2022年度北京市应急管理领域优秀硕士研究生</font>
-                    </a>)
+                    </a>)<a href="https://mp.weixin.qq.com/s/T8BmeI3BbwzkoJDZ9zKRig" target="_blank">
+                        <font color="#FF0000">【北理工信息学院专题报道】</font>
+                    </a>
                 </li>
 
                 <li> <b>
@@ -167,70 +176,74 @@
                     </b> Paper of Ziwei Wan was accepted by IEEE Trans. Wireless Communications (
                     <font>万子维 论文被IEEE TWC (IF=8.346)期刊录用</font>)【毫米波MIMO通感一体化】
                 </li>
-                <li> <b>
-                        <font color="#FF0000">[2022.08]</font>
-                    </b> Ph.D. student Li Qiao visits Imperial College London (
-                    <a href="https://www.imperial.ac.uk/information-processing-and-communications-lab/people/deniz/"
-                        target="_blank">
-                        <font>博士生乔力前往英国帝国理工学院Deniz Gündüz教授组访问交换
-                        </font>
-                    </a>)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2022.08]</font>
-                    </b> Minghui Wu, Yifei Zhang, and Yang Wang are awarded Second Prize in the North China Division of
-                    the Graduate Electronic Design Competition (
-                    <font>吴铭晖,张翼飞和王洋获得“兆易创新杯”第十七届中国研究生电子设计竞赛华北赛区二等奖</font>)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2022.08]</font>
-                    </b> Zhen Gao was awarded First Prize by Chinese Institute of Command and Control (
-                    <a href="" target="_blank">
-                        <font>高镇获中国指挥与控制协会科学技术进步一等奖</font>
-                    </a>)
-                </li>
-
-                <!-- <li> <b>
-                        <font color="#FF0000">[2022.06]</font>
-                    </b> Yang Wang and Shicong Liu got internship offer of Meituan and ByteDance in related fields (
-                    <a href="" target="_blank">
-                        <font>王洋和刘仕聪分别获美团和字节跳动相关方向实习offer</font>
-                    </a>)
-                </li> -->
-
-                <li> <b>
-                        <font color="#FF0000">[2022.06]</font>
-                    </b> Hongshan Liu was awarded the highest Scholarship of Beijing Institute of Technology (
-                    <a href="" target="_blank">
-                        <font>祝贺刘泓杉获得北京理工大学2022年徐特立奖学金(最高荣誉奖学金)</font>
-                    </a>)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2022.06]</font>
-                    </b> IWCMC Conference Paper of Malong Ke and Shicong Liu were elected as Best and Student Best paper
-                    resp. (
-                    <a href="" target="_blank">
-                        <font>柯玛龙、刘仕聪的IWCMC会议论文被分别评为最佳/学生最佳论文</font>
-                    </a>)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2022.06]</font>
-                    </b> Hongshan Liu, Yifei Zhang, Zhuoran Li, and Ye Zeng were elected as Outstanding Graduates (
-                    <a href="" target="_blank">
-                        <font>刘泓杉(市级), 张翼飞(市级), 李卓然(市级), 曾烨(校级)获选优秀本科毕业生</font>
-                    </a>)
-                </li>
-
-
-
 
 
                 <details>
                     <summary>View More Earlier News</summary>
+                    <li> <b>
+                            <font color="#FF0000">[2022.08]</font>
+                        </b> Ph.D. student Li Qiao visits Imperial College London (
+                        <a href="https://www.imperial.ac.uk/information-processing-and-communications-lab/people/deniz/"
+                            target="_blank">
+                            <font>博士生乔力前往英国帝国理工学院Deniz Gündüz教授组访问交换
+                            </font>
+                        </a>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2022.08]</font>
+                        </b> Minghui Wu, Yifei Zhang, and Yang Wang are awarded Second Prize in the North China Division
+                        of
+                        the Graduate Electronic Design Competition (
+                        <font>吴铭晖,张翼飞和王洋获得“兆易创新杯”第十七届中国研究生电子设计竞赛华北赛区二等奖</font>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2022.08]</font>
+                        </b> Zhen Gao was awarded First Prize by Chinese Institute of Command and Control (
+                        <a href="" target="_blank">
+                            <font>高镇获中国指挥与控制协会科学技术进步一等奖</font>
+                        </a>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2022.06]</font>
+                        </b> Yang Wang and Shicong Liu got internship offer of Meituan and ByteDance in related fields (
+                        <a href="" target="_blank">
+                            <font>王洋和刘仕聪分别获美团和字节跳动相关方向实习offer</font>
+                        </a>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2022.06]</font>
+                        </b> Hongshan Liu was awarded the highest Scholarship of Beijing Institute of Technology (
+                        <a href="" target="_blank">
+                            <font>祝贺刘泓杉获得北京理工大学2022年徐特立奖学金(最高荣誉奖学金)</font>
+                        </a>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2022.06]</font>
+                        </b> IWCMC Conference Paper of Malong Ke and Shicong Liu were elected as Best and Student Best
+                        paper
+                        resp. (
+                        <a href="" target="_blank">
+                            <font>柯玛龙、刘仕聪的IWCMC会议论文被分别评为最佳/学生最佳论文</font>
+                        </a>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2022.06]</font>
+                        </b> Hongshan Liu, Yifei Zhang, Zhuoran Li, and Ye Zeng were elected as Outstanding Graduates (
+                        <a href="" target="_blank">
+                            <font>刘泓杉(市级), 张翼飞(市级), 李卓然(市级), 曾烨(校级)获选优秀本科毕业生</font>
+                        </a>)
+                    </li>
+
+
+
+
+
                     <li> <b>
                             <font color="#FF0000">[2022.05]</font>
                         </b>
