update wcl info

--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
                         <span>[50] Xinyu Zhu, Yang Huang, Shaoyu Wang, Qihui Wu, Xiaohu Ge, Yuan Liu, <b>Zhen Gao</b>,
                             "Dynamic
                             Spectrum Anti-Jamming with Reinforcement Learning Based on Value Function Approximation," in
-                            IEEE Wireless Communications Letters 2023.
+                            IEEE Wireless Commun. Lett. vol. 12, no. 2, pp. 386-390, Feb. 2023.
                             <!-- [<a href="https://arxiv.org/abs/2301.06055" target="_blank">arXiv</a>] -->
                             [<a href="https://ieeexplore.ieee.org/document/9978681" target="_blank">IEEE URL</a>]
                         </span>
