update wcl info

--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
                         <span>[42] <b>Z. Gao</b>, Z. Wan, D. Zheng, S. Tan, C. Masouros, D. W. K. Ng, and S. Chen,
                             "Integrated
                             Sensing and Communication with mmWave Massive MIMO: A Compressed Sampling Perspective,"
-                            accepted by IEEE Transactions on Wireless Communications.
+                            accepted by IEEE Transactions on Wireless Communications vol. 22, no. 2, pp. 1343-1358, Feb. 2023.
                             [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/9898900/" target="_blank">IEEE URL</a>]
                         </span>
@@ -1099,7 +1099,7 @@
                         <span>[40] Z. Wan, <b>Z. Gao</b>, M. D. Renzo and L. Hanzo, "The Road to Industry 4.0 and
                             Beyond: A
                             Communications-, Information-, and Operation Technology Collaboration Perspective," in IEEE
-                            Network, doi: 10.1109/MNET.008.2100484. (Early Access)
+                            Network, vol. 36, no. 6, pp. 157-164, November/December 2022.
                             [<a href="https://ieeexplore.ieee.org/document/9839641" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
