--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2023.02]</font>
-                    </b> Ph.D. student Ziwei Wan visits the University of Surrey  (<a href="https://www.surrey.ac.uk/people/pei-xiao" target="_blank">
+                    </b> Ph.D. student Ziwei Wan visits the University of Surrey (<a
+                        href="https://www.surrey.ac.uk/people/pei-xiao" target="_blank">
                         <font>博士生万子维前往英国萨里大学Pei Xiao教授组访问交换</font>
                     </a>)
                 </li>
@@ -1080,7 +1081,8 @@
                         <span>[42] <b>Z. Gao</b>, Z. Wan, D. Zheng, S. Tan, C. Masouros, D. W. K. Ng, and S. Chen,
                             "Integrated
                             Sensing and Communication with mmWave Massive MIMO: A Compressed Sampling Perspective,"
-                            accepted by IEEE Transactions on Wireless Communications vol. 22, no. 2, pp. 1343-1358, Feb. 2023.
+                            accepted by IEEE Transactions on Wireless Communications vol. 22, no. 2, pp. 1343-1358, Feb.
+                            2023.
                             [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/9898900/" target="_blank">IEEE URL</a>]
                         </span>
@@ -1645,11 +1647,10 @@
                     </p>
 
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
-                        <span>[7] <b>Zhen Gao</b>, Chao Zhang, Zhaocheng Wang, and Sheng Chen, "Priori-information aided
-                            iterative hard decision: A low-complexity high-accuracy compressive sensing based channel
-                            estimation for TDS-OFDM," <i>IEEE Transactions on Wireless Communications</i>, vol. 14, no.
-                            1,
-                            pp. 242-251, Jan. 2015.
+                        <span>[7] <b>Zhen Gao</b>, Chao Zhang, Zhaocheng Wang, and Sheng Chen, "Priori-Information Aided
+                            Iterative Hard Threshold: A Low-Complexity High-Accuracy Compressive Sensing Based Channel
+                            Estimation for TDS-OFDM," <i>IEEE Transactions on Wireless Communications</i>, vol. 14, no.
+                            1, pp. 242-251, Jan. 2015.
                             (<b>SCI Q1 Top, IF=6.779</b>)
                             [<a href="https://ieeexplore.ieee.org/document/6856215/" target="_blank">URL</a>]
                         </span>
