--- a/index.html
+++ b/index.html
@@ -1042,6 +1042,7 @@
                             Massive MIMO", accepted by IEEE Journal on Selected Areas in Communications
                             [<a href="https://arxiv.org/abs/2209.08456" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10032139" target="_blank">IEEE URL</a>]
+                            [<a href="https://github.com/wuminghui123/DL_RSMA" target="_blank">Codes</a>]
                         </span>
                     </p>
 
