--- a/index.html
+++ b/index.html
@@ -1071,8 +1071,7 @@
                         <span>[43] B. Zhu, E. Bedeer, H. H. Nguyen, R. Barton and <b>Z. Gao</b>, "UAV Trajectory
                             Planning for
                             AoI-Minimal Data Collection in UAV-Aided IoT Networks by Transformer," in IEEE Transactions
-                            on Wireless Communications, 2022, doi: 10.1109/TWC.2022.3204438.
-                            <!-- [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>] -->
+                            on Wireless Communications, vol. 22, no. 2, pp. 1343-1358, Feb. 2023.
                             [<a href="https://ieeexplore.ieee.org/document/9892691" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
@@ -1082,8 +1081,7 @@
                         <span>[42] <b>Z. Gao</b>, Z. Wan, D. Zheng, S. Tan, C. Masouros, D. W. K. Ng, and S. Chen,
                             "Integrated
                             Sensing and Communication with mmWave Massive MIMO: A Compressed Sampling Perspective,"
-                            accepted by IEEE Transactions on Wireless Communications vol. 22, no. 2, pp. 1343-1358, Feb.
-                            2023.
+                            accepted by IEEE Transactions on Wireless Communications.
                             [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/9898900/" target="_blank">IEEE URL</a>]
                         </span>
