--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2023.03]</font>
+                    </b> Paper of Malong Ke was accepted by IEEE JSAC (柯玛龙论文被IEEE JSAC (IF=13.081)期刊录用)【海量URLLC半盲检测:
+                    无源/有源随机接入的统一框架】
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2023.03]</font>
+                    </b> Paper of Keke Ying was accepted by IEEE WCM (应科柯论文被IEEE Wireless Commun.
+                    (IF=11.979)期刊录用)【可重构像素MIMO: 开辟电磁域信息传输新维度】
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2023.02]</font>
                     </b> Ph.D. student Ziwei Wan visits the University of Surrey (<a
                         href="https://www.surrey.ac.uk/people/pei-xiao" target="_blank">
@@ -995,6 +1007,24 @@
                             [<a href="https://ieeexplore.ieee.org/document/9891773/" target="_blank">IEEE URL</a>]
                         </span>
                     </p> -->
+                    <!-- <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[50] Xinyu Zhu, Yang Huang, Shaoyu Wang, Qihui Wu, Xiaohu Ge, Yuan Liu, <b>Zhen Gao</b>,
+                            "Dynamic
+                            Spectrum Anti-Jamming with Reinforcement Learning Based on Value Function Approximation," in
+                            IEEE Wireless Commun. Lett. vol. 12, no. 2, pp. 386-390, Feb. 2023.
+                             [<a href="https://arxiv.org/abs/2301.06055" target="_blank">arXiv</a>] 
+                            [<a href="https://ieeexplore.ieee.org/document/9978681" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p> -->
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[51] Keke Ying, Zhen Gao, Sheng Chen, Xinyu Gao, Michail Matthaiou, Rui Zhang, and Robert
+                            Schober, ``Reconfigurable Massive MIMO: Harnessing the Power of the Electromagnetic Domain
+                            for Enhanced Information Transfer, '' accepted by IEEE Wireless Communications.
+                            [<a href="https://arxiv.org/abs/2302.11385" target="_blank">arXiv</a>]
+                            <!-- [<a href="https://ieeexplore.ieee.org/document/9978681" target="_blank">IEEE URL</a>] -->
+                        </span>
+                    </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[50] Xinyu Zhu, Yang Huang, Shaoyu Wang, Qihui Wu, Xiaohu Ge, Yuan Liu, <b>Zhen Gao</b>,
                             "Dynamic
