--- a/index.html
+++ b/index.html
@@ -667,6 +667,27 @@
                     UM-MIMO channels <font color="#FF0000">[R1]</font>. We have also proposed an edge computing paradigm
                     for massive IoT connectivity over <mark>High-Altitude Platform Networks (HAPNs)</mark>
                     <font color="#FF0000">[R2]</font>.
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseFift">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseFift" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html?aid=992620685&bvid=BV1Vs4y1f7Tq&cid=1025544097&page=1&as_wide=1&high_quality=1&danmaku="
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- <iframe src="//player.bilibili.com/player.html?aid=992620685&bvid=BV1Vs4y1f7Tq&cid=1025544097&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe> -->
                     <details>
                         <summary>Related Work</summary>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
@@ -1024,6 +1045,26 @@
                             <!-- [<a href="https://ieeexplore.ieee.org/document/9978681" target="_blank">IEEE URL</a>] -->
                         </span>
                     </p>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseSixt">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseSixt" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html?aid=438370453&bvid=BV1KL411o7Mh&cid=1051194423&page=1&as_wide=1&high_quality=1&danmaku="
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <iframe src="//player.bilibili.com/player.html?aid=438370453&bvid=BV1KL411o7Mh&cid=1051194423&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe> -->
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[50] Xinyu Zhu, Yang Huang, Shaoyu Wang, Qihui Wu, Xiaohu Ge, Yuan Liu, <b>Zhen Gao</b>,
