--- a/index.html
+++ b/index.html
@@ -1038,6 +1038,14 @@
                         </span>
                     </p> -->
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[52] Malong Ke, Zhen Gao, Mingyu Zhou, Dezhi Zheng, Derrick Wing Kwan Ng, H. Vincent Poor,
+                            "Next-Generation URLLC with Massive Devices: A Unified Semi-Blind Detection Framework for
+                            Sourced and Unsourced Random Access," accepted by IEEE J. Sel. Areas Commun., 2023.
+                            [<a href="https://arxiv.org/abs/2303.04414" target="_blank">arXiv</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[51] Keke Ying, Zhen Gao, Sheng Chen, Xinyu Gao, Michail Matthaiou, Rui Zhang, and Robert
                             Schober, ``Reconfigurable Massive MIMO: Harnessing the Power of the Electromagnetic Domain
                             for Enhanced Information Transfer, '' accepted by IEEE Wireless Communications.
