update paper info

--- a/index.html
+++ b/index.html
@@ -1168,9 +1168,9 @@
                     <!-- https://ieeexplore.ieee.org/abstract/document/9737291 -->
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[42] <b>Z. Gao</b>, Z. Wan, D. Zheng, S. Tan, C. Masouros, D. W. K. Ng, and S. Chen,
-                            "Integrated
-                            Sensing and Communication with mmWave Massive MIMO: A Compressed Sampling Perspective,"
-                            accepted by IEEE Transactions on Wireless Communications.
+                            Integrated Sensing and Communication With mmWave Massive MIMO: A Compressed Sampling
+                            Perspective," in IEEE Transactions on Wireless Communications, vol. 22, no. 3, pp.
+                            1745-1762, March 2023.
                             [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/9898900/" target="_blank">IEEE URL</a>]
                         </span>
