--- a/index.html
+++ b/index.html
@@ -1138,11 +1138,11 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[45] X. Zhou, K. Ying, <b>Z. Gao</b>, Y. Wu, Z. Xiao, S. Chatzinotas, J. Yuan, and B.
                             Ottersten,
-                            “Active Terminal Identification, Channel Estimation, and Signal Detection for Grant-Free
-                            NOMA-OTFS in LEO Satellite Internet-of-Things”, accepted by IEEE Trans. Wireless Commun.,
-                            arXiv:2201.02084.
+                            "Active Terminal Identification, Channel Estimation, and Signal Detection for Grant-Free
+                            NOMA-OTFS in LEO Satellite Internet-of-Things," in IEEE Transactions on Wireless
+                            Communications, vol. 22, no. 4, pp. 2847-2866, April 2023, doi: 10.1109/TWC.2022.3214862.
                             [<a href="https://arxiv.org/pdf/2201.02084.pdf" target="_blank">arXiv</a>]
-                            <!-- [<a href="https://ieeexplore.ieee.org/document/9891773/" target="_blank">IEEE URL</a>] -->
+                            [<a href="https://ieeexplore.ieee.org/document/9928043" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
 
