--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2023.04]</font>
+                    </b> Paper of Keke Ying was accepted by IEEE JSAC (应科柯论文被IEEE JSAC (IF=13.081)期刊录用)【低轨卫星星座协作式大规模随机接入】
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2023.04]</font>
                     </b> Dr. Zhen Gao is the recipient of Elsevier 2022 MOST Cited Chinese Researchers (高镇
                     入选爱思唯尔2022中国高被引学者)
                 </li>
