--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2023.04]</font>
-                    </b> Paper of Keke Ying was accepted by IEEE JSAC (应科柯论文被IEEE JSAC (IF=13.081)期刊录用)【低轨卫星星座协作式大规模随机接入】
+                    </b> Paper of Keke Ying was accepted by IEEE JSAC (应科柯论文被IEEE JSAC
+                    (IF=13.081)期刊录用)【低轨卫星星座协作式大规模随机接入】
                 </li>
 
                 <li> <b>
@@ -1052,6 +1053,14 @@
                             [<a href="https://ieeexplore.ieee.org/document/9978681" target="_blank">IEEE URL</a>]
                         </span>
                     </p> -->
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[54] K. Ying, Zhen Gao, Sheng Chen, Mingyu Zhou, Dezhi Zheng, Symeon Chatzinotas, Björn
+                            Ottersten, and H. Vincent Poor, “Quasi-Synchronous Random Access for Massive MIMO-Based LEO
+                            Satellite Constellations,”accepted by IEEE J. Sel. Areas Commun., 2023.
+                            [<a href="https://arxiv.org/abs/2304.04484" target="_blank">arXiv</a>]
+                        </span>
+                    </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[52] Malong Ke, Zhen Gao, Mingyu Zhou, Dezhi Zheng, Derrick Wing Kwan Ng, H. Vincent Poor,
                             "Next-Generation URLLC with Massive Devices: A Unified Semi-Blind Detection Framework for
