--- a/index.html
+++ b/index.html
@@ -1060,6 +1060,14 @@
                             [<a href="https://arxiv.org/abs/2304.04484" target="_blank">arXiv</a>]
                         </span>
                     </p>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[53] Yikun Mei, Zhen Gao, De Mi, Mingyu Zhou, Dezhi Zheng, Michail Matthaiou, Pei Xiao,
+                            Robert Schober, "Massive Access in Extra Large-Scale MIMO With Mixed-ADC Over Near-Field
+                            Channels", accepted by IEEE Trans. Vehicular Technology, 2023.
+                            [<a href="https://arxiv.org/abs/2207.01983" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10098957" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[52] Malong Ke, Zhen Gao, Mingyu Zhou, Dezhi Zheng, Derrick Wing Kwan Ng, H. Vincent Poor,
