--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2023.04]</font>
+                    </b> Shicong Liu was awarded Hong Kong PhD Fellowship Scheme (HKPFS) at CityU Hong Kong (<a href="https://www.ugc.edu.hk/doc/eng/rgc/hkphd/2023_24_awardee.pdf" target="_blank">
+                        <font>刘仕聪获得港府奖学金资助在香港城市大学攻读博士学位</font></a>)
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2023.04]</font>
                     </b> Paper of Keke Ying was accepted by IEEE JSAC (应科柯论文被IEEE JSAC
                     (IF=13.081)期刊录用)【低轨卫星星座协作式大规模随机接入】
                 </li>
