--- a/index.html
+++ b/index.html
@@ -1855,6 +1855,38 @@
                     <font style="font-size: 18px;">Conferences</font>
                 </b>: </p>
             <font size="3">
+                <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[29] Z. Li, Z. Wan, K. Ying, Y. Mei, M. Ke and Z. Gao, "Reconfigurable Intelligent Surface
+                            Assisted Localization Over Near-Field Beam Squint Effect," 2022 International Symposium on
+                            Wireless Communication Systems (ISWCS), Hangzhou, China, 2022, pp. 1-6.
+                            [<a href="https://ieeexplore.ieee.org/document/9940428" target="_blank">URL</a>]
+                            <!-- [<a href="./Files/IWCMC_Slides/kmlSlides.pdf" target="_blank">Slides</a>] -->
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[28] M. Ke, Z.Gao, S. Tan, et al., "Massive MIMO-enabled semi-blind detection for
+                            grant-free massive connectivity," in Proc IEEE Int. Wireless Commun. Mobile Comput. (IWCMC),
+                            Dubrovnik, Croatia, Jul. 2022, pp. 38-43. (<font color="#FF0000">Best Paper</font>)
+                            [<a href="https://ieeexplore.ieee.org/document/9825394" target="_blank">URL</a>]
+                            [<a href="./Files/IWCMC_Slides/kmlSlides.pdf" target="_blank">Slides</a>]
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[27] Z. Wan, Z. Gao, S. Tan and L. Fang, "Joint Channel Estimation and Radar Sensing for
+                            UAV Networks with mmWave Massive MIMO," 2022 International Wireless Communications and
+                            Mobile Computing (IWCMC), Dubrovnik, Croatia, 2022, pp. 44-49.
+                            [<a href="https://ieeexplore.ieee.org/document/9824264" target="_blank">URL</a>]
+                            [<a href="./Files/IWCMC_Slides/wzwSlides.pdf" target="_blank">Slides</a>]
+                        </span>
+                    </p>
+                </ul>
 
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
